[gd_scene load_steps=12 format=3 uid="uid://djhybcuh75wvo"]

[ext_resource type="Script" uid="uid://c56s2sr7ad2bg" path="res://Scripts/stage_1.gd" id="1_l54u8"]
[ext_resource type="Texture2D" uid="uid://dbo45gqkvb77b" path="res://Images/background_layer_1.png" id="2_oofuc"]
[ext_resource type="FontFile" uid="uid://bckja1mt70hbc" path="res://Misc/PressStart2P-Regular.ttf" id="3_6pi4o"]
[ext_resource type="Texture2D" uid="uid://btbipq0b7bihk" path="res://Images/background_layer_2.png" id="3_ouf7w"]
[ext_resource type="Texture2D" uid="uid://dl1muueml6loq" path="res://Images/background_layer_3.png" id="4_03xx2"]
[ext_resource type="FontFile" uid="uid://duksq34xfyd7j" path="res://Misc/Orbitron-Regular.ttf" id="6_hi2x4"]
[ext_resource type="AudioStream" uid="uid://fcn0a3i60ppn" path="res://Music/Juhani Junkala [Retro Game Music Pack] Level 3.wav" id="7_nvok0"]

[sub_resource type="Gradient" id="Gradient_j54hf"]
offsets = PackedFloat32Array(0.163743, 0.321637, 0.766082, 0.900585)
colors = PackedColorArray(1, 0.721569, 1, 1, 1, 0.985498, 1, 1, 1, 1, 1, 1, 1, 0.721569, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jrfhm"]
gradient = SubResource("Gradient_j54hf")
width = 8
height = 320

[sub_resource type="Gradient" id="Gradient_bkkvq"]
offsets = PackedFloat32Array(0, 0.259259, 0.561728, 0.944444)
colors = PackedColorArray(0, 0.188235, 0, 1, 0.280121, 0.150471, 0.131713, 1, 0.717978, 0.400429, 0.363623, 1, 0.819112, 0.431401, 0.176576, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r5ccq"]
gradient = SubResource("Gradient_bkkvq")
width = 320
height = 10
fill_from = Vector2(0.52381, 1)
fill_to = Vector2(0.52381, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l54u8")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(324, 0)
autoscroll = Vector2(-80, 0)
repeat_times = 2

[node name="BackgroundLayer1" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(213, 120)
scale = Vector2(1.32778, 1.32778)
texture = ExtResource("2_oofuc")

[node name="ParallaxBackground2" type="Parallax2D" parent="."]
repeat_size = Vector2(424.96, 0)
autoscroll = Vector2(-120, 0)
repeat_times = 2

[node name="BackgroundLayer2" type="Sprite2D" parent="ParallaxBackground2"]
position = Vector2(213, 120)
scale = Vector2(1.328, 1.328)
texture = ExtResource("3_ouf7w")

[node name="ParallaxBackground3" type="Parallax2D" parent="."]
repeat_size = Vector2(424.96, 0)
autoscroll = Vector2(-300, 0)
repeat_times = 2

[node name="BackgroundLayer3" type="Sprite2D" parent="ParallaxBackground3"]
position = Vector2(213, 120)
scale = Vector2(1.328, 1.328)
texture = ExtResource("4_03xx2")

[node name="TextTimer" type="RichTextLabel" parent="."]
clip_children = 1
offset_left = 139.0
offset_top = 4.0
offset_right = 459.0
offset_bottom = 41.0
theme_override_fonts/normal_font = ExtResource("3_6pi4o")
theme_override_font_sizes/normal_font_size = 8
text = "TIME : "

[node name="TextureRect2" type="TextureRect" parent="TextTimer"]
layout_mode = 0
offset_left = 169.0
offset_right = 236.0
offset_bottom = 2677.0
rotation = 1.5708
scale = Vector2(0.12, 0.12)
texture = SubResource("GradientTexture2D_jrfhm")

[node name="TextScore" type="RichTextLabel" parent="."]
clip_children = 1
offset_left = 6.0
offset_top = 4.0
offset_right = 125.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("3_6pi4o")
theme_override_font_sizes/normal_font_size = 8
text = "SCORE:"

[node name="TextureRect" type="TextureRect" parent="TextScore"]
layout_mode = 0
offset_left = 321.0
offset_right = 388.0
offset_bottom = 2677.0
rotation = 1.5708
scale = Vector2(0.12, 0.12)
texture = SubResource("GradientTexture2D_jrfhm")

[node name="TextLives" type="RichTextLabel" parent="."]
clip_children = 1
offset_left = 248.0
offset_top = 4.0
offset_right = 367.0
offset_bottom = 12.0
theme_override_fonts/normal_font = ExtResource("3_6pi4o")
theme_override_font_sizes/normal_font_size = 8
text = "LIVES: "

[node name="TextureRect" type="TextureRect" parent="TextLives"]
layout_mode = 0
offset_left = 317.0
offset_right = 384.0
offset_bottom = 2677.0
rotation = 1.5708
scale = Vector2(0.12, 0.12)
texture = SubResource("GradientTexture2D_jrfhm")

[node name="BossHP" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(0, 10)
offset_top = 230.0
offset_right = 320.0
offset_bottom = 240.0
value = 75.0
texture_progress = SubResource("GradientTexture2D_r5ccq")

[node name="Stage 1 Text Back" type="RichTextLabel" parent="."]
offset_left = 109.0
offset_top = 84.0
offset_right = 263.0
offset_bottom = 124.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hi2x4")
text = "STAGE 1"

[node name="Stage 1 Text" type="RichTextLabel" parent="."]
offset_left = 111.0
offset_top = 82.0
offset_right = 265.0
offset_bottom = 122.0
theme_override_fonts/normal_font = ExtResource("6_hi2x4")
text = "STAGE 1"

[node name="Forest Back" type="RichTextLabel" parent="."]
offset_left = 146.0
offset_top = 102.0
offset_right = 299.0
offset_bottom = 130.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_hi2x4")
text = "FOREST"

[node name="Forest Text" type="RichTextLabel" parent="."]
offset_left = 148.0
offset_top = 100.0
offset_right = 301.0
offset_bottom = 128.0
theme_override_fonts/normal_font = ExtResource("6_hi2x4")
text = "FOREST"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_nvok0")
bus = &"Music"
